bonus/ingressGitlab.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitlab.example.com`)
      priority: 12
      services:
        - name: gitlab-webservice-default
          port: 8181

  tls:
    certResolver: default
